<resources>
    <string name="app_name">AplikacjaTreningowa</string>
    <string name="welcome">Rozpocznij</string>
    <string name="powitanie">Witamy w aplikacji treningowej Shark</string>
    <string name="stat_button">Statystyki</string>
    <string name="bmi_button">Kalkulator BMI</string>
    <string name="stoper">Stoper</string>
    <string name="plan_treningowy">Plany treningowe</string>
    <string name="trening">Trening</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="title_activity_notatnik">Notatnik</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_notetnik">Notetnik</string>
</resources>
